# rustfmt-wrapper

./: CHANGELOG.adoc  Cargo.toml  README.md  release.toml
.github/workflows/: rust.yml
src/: conf.rs  lib.rs
src/config/: mod.rs
