[package]
name = "rustfmt-wrapper"
version = "0.2.1-dev"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
description = "Library wrapper around rustfmt for use by code generators"
repository = "https://github.com/oxidecomputer/rustfmt-wrapper"
readme = "README.md"
keywords = ["rustfmt"]
categories = ["development-tools",
              "development-tools::procedural-macro-helpers"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "1.0.49"
toml = "0.8.2"
toolchain_find = "0.4.0"

[dev-dependencies]
quote = "1.0.33"
newline-converter = "0.3.0"
